[gd_scene load_steps=6 format=3 uid="uid://bmv4bv525ftyn"]

[ext_resource type="Script" uid="uid://eoth2p6561h3" path="res://Scripts/english_categorie_beta.gd" id="1_6w28j"]
[ext_resource type="FontFile" uid="uid://bkogwpgk20lp" path="res://RubikMonoOne-Regular.ttf" id="1_45vlj"]
[ext_resource type="Texture2D" uid="uid://bwp5njyyylx7j" path="res://Buttons/Icons/right-arrow (1).png" id="3_wim2s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_348ua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wim2s"]

[node name="English" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6w28j")

[node name="ColorRect_Timer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -833.0
offset_top = -456.0
offset_right = 833.0
offset_bottom = 456.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.623529, 0, 1)

[node name="Timer Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -331.335
offset_right = 163.0
offset_bottom = -211.335
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_45vlj")
theme_override_font_sizes/font_size = 96
text = "3:00"

[node name="Counter Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -137.0
offset_right = 94.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_45vlj")
theme_override_font_sizes/font_size = 221
text = "1"

[node name="Words" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -66.0
offset_right = 180.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_45vlj")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 7.0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_348ua")
flat = true

[node name="Left" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503
anchor_right = 0.996
anchor_bottom = 1.0
offset_left = 3.54395
offset_top = -3.0
offset_right = 7.60791
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wim2s")
flat = true

[node name="Exit Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 75.0
offset_right = 148.0
offset_bottom = 139.0
rotation = 3.14159
texture_normal = ExtResource("3_wim2s")

[connection signal="pressed" from="Right" to="." method="_on_correct_button_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_wrong_button_pressed"]
[connection signal="pressed" from="Exit Button" to="." method="_on_exit_button_pressed"]
